# neuron10

./: CMakeLists.txt  README.md  main.cpp  neurontrainer.cpp  neurontrainer.h  r_element.cpp  r_element.h  singleneuron.cpp  singleneuron.h
builds/: CMakeCache.txt  cmake_install.cmake  coefs0  coefs1  coefs2  coefs3  coefs4  coefs5  coefs6  coefs7  coefs8  coefs9  neuron10  neuron10.cbp
